lesson 61, добавили login в Header

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,9 +1,12 @@
 .header {
-    grid-area: h;
-    background-color: lightgreen;
-    }
+  grid-area: h;
+  background-color: lightgreen;
+}
 
 .header img {
-      width: 50px;
-    }
-    
+  width: 50px;
+}
+
+.loginBlock {
+  float: right;
+}
